--- a/src/styles/schedule/schedule.module.css
+++ b/src/styles/schedule/schedule.module.css
@@ -1,14 +1,14 @@
 .container_schedule {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   margin: 2%;
   display: flex;
   flex-direction: column;
   border-radius: 1%;
-  border: 1px solid #D4D4D4;
+  border: 1px solid #d4d4d4;
   width: 1058px;
   height: auto;
-  color: #3E3E3E;
-  font-family: "Open Sans", sans-serif;
+  color: #3e3e3e;
+  font-family: 'Open Sans', sans-serif;
   font-weight: bold;
 }
 .container_schedule_header {
@@ -19,7 +19,7 @@
 }
 .container_schedule_header_horario {
   width: 117px;
-  border-right: 1px solid #D4D4D4;
+  border-right: 1px solid #d4d4d4;
   height: 56px;
 }
 .container_schedule_header_horario_text {
@@ -30,7 +30,7 @@
   text-align: center;
 }
 .container_schedule_header_caps {
-  border-right: 1px solid #D4D4D4;
+  border-right: 1px solid #d4d4d4;
   width: 162px;
   height: 56px;
 }
@@ -53,7 +53,6 @@
 .container_schedule_lineTime_caps {
   display: flex;
   flex-direction: row;
-  border-bottom: 1px solid #D4D4D4;
 }
 .container_schedule_lineTime_caps_text {
   width: 114px;
@@ -96,7 +95,7 @@
 }
 .container_schedule_top {
   position: absolute;
-  border-top: 1px solid #D4D4D4;
+  border-top: 1px solid #d4d4d4;
   margin-left: 1%;
   margin-right: 0.1%;
   width: 1035px;
