add hover pointer

--- a/src/styles/containerSchedule/containerSchedule.modules.css
+++ b/src/styles/containerSchedule/containerSchedule.modules.css
@@ -7,6 +7,9 @@
   margin-top: 5px;
   justify-content: center;
 }
+.containerSchedule:hover {
+  cursor: pointer;
+}
 .containerSchedule_text {
   font-family: "Open Sans", sans-serif;
   color: #FFFFFF;
